@startuml ER Diagram - Supply Chain Fuel Distribution B2B
!theme plain
skinparam linetype ortho
skinparam roundcorner 8
skinparam EntityBorderColor #3B5998
skinparam EntityBackgroundColor #EEF2FF
skinparam EntityFontStyle bold

title Supply Chain Fuel App — Entity Relationship Diagram\n(Kelompok 9 — US 2.1 Implemented Scope)

' ─── COMPANY ─────────────────────────────────────────────────────
entity "companies" as companies {
  * id : BIGINT <<PK, AUTO_INCREMENT>>
  --
  name : VARCHAR(255) NOT NULL
  email : VARCHAR(255) NOT NULL
  phone : VARCHAR(20) NULL
  address : TEXT NULL
  npwp : VARCHAR(50) UNIQUE NULL
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

' ─── USERS ───────────────────────────────────────────────────────
entity "users" as users {
  * id : BIGINT <<PK, AUTO_INCREMENT>>
  --
  company_id : BIGINT <<FK, NULL>>
  name : VARCHAR(255) NOT NULL
  email : VARCHAR(255) UNIQUE NOT NULL
  password : VARCHAR(255) NOT NULL
  role : ENUM(staf_pembeli, manajer_pembeli,\n    admin_penjualan, admin_depo, petugas_spbu)\n    DEFAULT staf_pembeli
  email_verified_at : TIMESTAMP NULL
  remember_token : VARCHAR(100) NULL
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

' ─── ORDERS ──────────────────────────────────────────────────────
entity "orders" as orders {
  * id : BIGINT <<PK, AUTO_INCREMENT>>
  --
  order_number : VARCHAR(50) UNIQUE NOT NULL
  company_id : BIGINT <<FK>>
  created_by : BIGINT <<FK>> ' → users.id
  approved_by : BIGINT <<FK, NULL>> ' → users.id
  fuel_type : VARCHAR(50) DEFAULT 'Solar'
  volume_liters : DECIMAL(10,2) NOT NULL
  unit_price : DECIMAL(12,2) NOT NULL
  delivery_location : VARCHAR(255) NOT NULL
  scheduled_at : DATETIME NOT NULL
  status : ENUM(draft, pending_approval, approved,\n    waiting_payment, paid, cancelled, expired)\n    DEFAULT draft
  rejection_reason : TEXT NULL
  approved_at : TIMESTAMP NULL
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

' ─── INVOICES ────────────────────────────────────────────────────
entity "invoices" as invoices {
  * id : BIGINT <<PK, AUTO_INCREMENT>>
  --
  invoice_number : VARCHAR(50) UNIQUE NOT NULL
  order_id : BIGINT <<FK>>
  issued_by : BIGINT <<FK>> ' → users.id
  subtotal : DECIMAL(14,2) NOT NULL
  ppn_rate : DECIMAL(5,4) DEFAULT 0.1100
  ppn_amount : DECIMAL(14,2) NOT NULL
  total_amount : DECIMAL(14,2) NOT NULL
  status : ENUM(issued, paid, cancelled) DEFAULT issued
  pdf_path : VARCHAR(255) NULL
  issued_at : TIMESTAMP DEFAULT CURRENT_TIMESTAMP
  paid_at : TIMESTAMP NULL
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

' ─── VIRTUAL ACCOUNTS ────────────────────────────────────────────
entity "virtual_accounts" as virtual_accounts {
  * id : BIGINT <<PK, AUTO_INCREMENT>>
  --
  invoice_id : BIGINT <<FK>>
  va_number : VARCHAR(20) UNIQUE NOT NULL
  bank_code : VARCHAR(10) NOT NULL
  amount : DECIMAL(14,2) NOT NULL
  expires_at : TIMESTAMP NOT NULL
  status : ENUM(active, paid, expired, cancelled)\n    DEFAULT active
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

' ─── PAYMENT CALLBACKS ───────────────────────────────────────────
entity "payment_callbacks" as payment_callbacks {
  * id : BIGINT <<PK, AUTO_INCREMENT>>
  --
  virtual_account_id : BIGINT <<FK>>
  bank_reference : VARCHAR(100) NOT NULL
  amount_received : DECIMAL(14,2) NOT NULL
  received_at : TIMESTAMP NOT NULL
  is_valid : TINYINT(1) DEFAULT 0
  error_message : TEXT NULL
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

' ─── RELATIONSHIPS ───────────────────────────────────────────────
companies ||--o{ users            : "has"
companies ||--o{ orders           : "places"

users }o--o| companies            : "belongs to (nullable)"
users ||--o{ orders               : "created_by"
users |o--o{ orders               : "approved_by (nullable)"
users ||--o{ invoices             : "issued_by"

orders ||--o| invoices            : "generates one"
invoices ||--o{ virtual_accounts  : "has"
virtual_accounts ||--o{ payment_callbacks : "receives"

@enduml
